feat: init agin

--- a/packages/super-editor/package.json
+++ b/packages/super-editor/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "antd": "^4.16.13",
+    "axios": "^0.21.4",
+    "qs": "^6.10.1",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.19"
