--- a/packages/super-template/package.json
+++ b/packages/super-template/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@umijs/preset-react": "^1.8.24",
+    "antd": "^4.16.13",
+    "axios": "^0.21.4",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
