--- a/packages/super-template/package.json
+++ b/packages/super-template/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
+    "html2canvas": "^1.3.2",
+    "less": "^4.1.1",
     "react": "^17.0.2",
-    "rollup-plugin-babel": "^4.4.0"
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-less": "^1.1.3"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
