--- a/packages/super-editor/package.json
+++ b/packages/super-editor/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
     "react": "17.x",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "17.x",
     "umi": "^3.5.19"
   },
