--- a/packages/super-editor/package.json
+++ b/packages/super-editor/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "classnames": "^2.3.1",
     "react": "17.x",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
