--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.15.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
-    "core-js": "^3.18.1"
+    "core-js": "^3.18.1",
+    "express": "^4.17.1"
   }
 }
